--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/proxy/(.*)",
-      "destination": "https://library-management-server-two.vercel.app/(.*)"
+      "source": "/proxy/(*)",
+      "destination": "https://library-management-server-two.vercel.app/(*)"
     }
   ]
 }
