--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/proxy/*",
-      "destination": "/*"
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
