--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/proxy/api/(.*)",
-      "destination": "https://library-management-server-two.vercel.app/*"
+      "source": "/api/(.*)",
+      "destination": "/"
     }
   ]
 }
