--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "https://library-management-server-two.vercel.app/api/(.*)"
+      "source": "/api",
+      "destination": "https://library-management-server-two.vercel.app/api"
     }
   ]
 }
