--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://library-management-server-two.vercel.app/api"
+      "destination": "https://library-management-server-two.vercel.app/api/"
     }
   ]
 }
