--- a/package.json
+++ b/package.json
@@ -10,34 +10,40 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.8",
     "firebase": "^10.11.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-countup": "^6.5.3",
+    "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-scroll-parallax": "^3.4.5",
     "recharts": "^2.12.6",
     "redux-persist": "^6.0.0",
-    "sort-by": "^1.2.0"
+    "redux-thunk": "^3.1.0",
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.10.2",
+    "daisyui": "^4.10.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-3d": "^1.0.6",
     "vite": "^5.2.0"
   }
 }
