--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-daisyui": "^5.0.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-redux": "^9.1.1",
@@ -28,7 +29,7 @@
     "recharts": "^2.12.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
